--- a/mysytle.css
+++ b/mysytle.css
@@ -47,12 +47,15 @@ body
     transition: all 0.3s;
 }
 
-.btn:hover
+.btn:hover:not([disabled])
 {
      background-color: black;
      color: white;
 }
-
+.btn:disabled
+{
+    cursor: no-drop;
+}
 #next-btn
 {
     background-color: #222;
@@ -65,4 +68,12 @@ body
     border-radius: 4px;
     cursor: pointer;
     display: none;
+}
+
+.incorrect{
+    background: red;
+}
+
+.correct{
+    background: green;
 }
